--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -52,11 +52,24 @@
 <!--</p-editor>-->
 
 <div class="p-editor-container" style="height: 85vh">
+    <div *ngIf="tabs.length > 0" class="card" style="padding: 0; margin-bottom: 1rem">
+        <p-tabView (onChange)="onTabChange($event)" [(activeIndex)]="activeIndex" [scrollable]="true"  (onClose)="onTabClose($event)">
+            <p-tabPanel *ngFor="let tab of tabs" [closable]="true">
+                <ng-template pTemplate="header">
+                    <div class="flex align-items-center gap-2">
+                        <span class="font-bold white-space-nowrap m-0" style="font-family: Georgia, serif">
+                            {{ tab.title }}
+                        </span>
+                    </div>
+                </ng-template>
+
+            </p-tabPanel>
+        </p-tabView>
+    </div>
 
     <div #editor
          class="p-editor-content editor-style"
          id="editor"
-         style="border-radius: 12px;"
     >
     </div>
     <p-overlayPanel #op>
