--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -5,6 +5,7 @@
     width: 100%;
     border: 2px;
     line-height: 1.5;
+    border-radius: 12px;
 }
 
 .p-editor-container .p-editor-content .ql-editor {
@@ -12,4 +13,18 @@
     border-radius: 12px;
     padding: 5% 8% 25px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.02), 0 0 2px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, 0.08);
+}
+
+.p-editor-container .p-tabview-nav-content {
+    border-radius: 12px;
+}
+.p-editor-container .p-tabview-nav {
+    background: #f1f1f1;
+}
+
+.p-editor-container .p-tabview-nav-link {
+    background: #f1f1f1;
+}
+.p-editor-container .p-tabview-panels  {
+    padding: 0;
 }
